# ecfr-analyzer

./: .gitignore  .prettierignore  .vercelignore  CMakeLists.txt  README.md  ecfr_downloader.cpp  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ecfr-sync.yml
app/: layout.tsx  page.tsx
app/agencies/: page.tsx
app/agencies/[slug]/: page.tsx
app/api/ecfr/agencies/: route.ts
app/api/ecfr/content/: route.ts
app/api/ecfr/corrections/: route.ts
app/api/ecfr/search/: route.ts
app/api/ecfr/structure/: route.ts
app/api/ecfr/titles/: route.ts
app/api/word-count/: route.ts
app/api/word-count/all/: route.ts
app/api/word-count/recount-all/: route.ts
app/corrections/: page.tsx
app/search/: page.tsx
app/title-data/: page.tsx
app/title-data/[title]/: page.tsx
components/ecfr/: agency-count-stats.tsx  agency-efficiency-score.tsx  agency-word-count-graph.tsx  correction-time-analyzer.tsx  corrections-tracker.tsx  title-corrections-viewer.tsx
components/ui/: accordion.tsx  badge.tsx  breadcrumb.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  input-otp.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  slider.tsx  table.tsx  toast.tsx  toaster.tsx  toggle-group.tsx  toggle.tsx
lib/: ecfr.ts  supabase.ts
lib/providers/: providers.tsx
lib/services/: ecfr.ts  supabase.ts
public/ecfr/2025-02-02/1/: 1.md
types/: date-range.ts
(+269511 files in other folders)
